--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/app/[role]/[username]/page.tsx", "src/app/api/auth/login/route.ts", "src/app/admin/[username]/page.jsx", "src/lib/db.js", "src/models/post.js", "src/app/api/posts/route.js", "src/utils/postUtils.j", "src/app/api/series-data/route.js"  ],
+, "src/app/[role]/[username]/page.tsx", "src/app/api/auth/login/route.ts", "src/app/admin/[username]/page.jsx", "src/lib/db.js", "src/models/post.js", "src/app/api/posts/route.js", "src/utils/postUtils.j", "src/app/api/series-data/route.js", "src/app/page.tsx", "src/app/posts/components/CreatePost.tsx"  ],
   "exclude": [
     "node_modules"
   ]
