--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.2",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "22.9.0",
